Fri May 26 22:21:57 BST 2000 Andy Thomas <alt@gimp.org>

	* plug-ins/common/noisify.c

	Changes to the preview so it previews with alpha better..
	
Fri May 26 00:08:26 BST 2000 Andy Thomas <alt@gimp.org>

	* plug-ins/common/glasstile.c

	More changes to the preview so it actually does preview.
	Changed pluging so alpha channel is also tiled. This 
	seems to produce better results. 

	Fixed some some boundary conditions bugs 
	that caused "streaks" to appear when using some tile spaces.
	
2000-05-25  Sven Neumann  <sven@gimp.org>

	* app/color_select.c: update the color-selector when Return
	is pressed in the hex-entry.

Thu May 25 00:18:20 BST 2000 Andy Thomas <alt@gimp.org>

	* plug-ins/common/wind.c

	Ok. OK. The direction stuff works with transparent areas as well.

Wed May 24 23:53:04 BST 2000 <alt@gimp.org>

	* plug-ins/common/wind.c

	The preview works now as it should (ie what you see in the preview
	is what you get when the plugin gets applied). 
	Also changed so that the plugin takes note of the alpha channel
	if one exists.

	To see the changes try the plugin on an image that is mainly 
	transparent....

	Note some of the other plugins that have recently had previews
	added also suffer from the problem that the preview
	is not correct if the image contains transparent areas (e.g. noisify).

2000-05-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/grid.c: enabled preview in indexed 
	mode. Of course the colors do not reflect the result 
	exactly, but it's better than nothing.

	* jigsaw.c
	* plasma.c
	* wind.c: forgot to set preview flag to TRUE in the 
	calls to gimp_ui_init().

2000-05-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/flarefx.c
	* plug-ins/common/glasstile.c
	* plug-ins/common/grid.c
	* plug-ins/common/illusion.c
	* plug-ins/common/jigsaw.c
	* plug-ins/common/max_rgb.c
	* plug-ins/common/noisify.c
	* plug-ins/common/nova.c
	* plug-ins/common/plasma.c: I am stupid. Dropping the
	4-byte alignment caused the buffer's rowstride to 